# async_tcp_perforamance

./: .gitignore  README.md  client.sh  serverdotnet.sh  servergo.sh  serverrust.sh
DotnetTcp/: DotnetTcp.csproj  Program.cs  char.cs  pgo.sh  run.sh
gotcp/: main.go  run.sh
rust_tcp/: Cargo.toml  buildRPi  client.sh  run.sh
rust_tcp/src/: main.rs  unique_substring.rs
