[package]
name = "rust_tcp"
version = "0.0.1"
authors = [ "Your name <you@example.com>" ]
edition="2021"

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 2
rpath = false

[dependencies]
tokio = { version = "1", features = ["full"] }
# jemallocator = "0.3.2"
hashbrown = "0.12.0"
# bumpalo  = { version = "3.8.0", features = ["collections","boxed"] }
async-std = "1.10.0"
dialoguer = "0.10.0"
console = "0.15.0"